Event Page Added and Made it Responsive upto some extends'

--- a/event.html
+++ b/event.html
@@ -23,7 +23,7 @@
           <p>South Africa’s renewable energy programme</p>
         </div>
         <div class="stream-video">
-          <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+          <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4"
             controls></video>
         </div>
         <div class="stream-action">
@@ -42,64 +42,61 @@
               <img src="./img/avatar.jpg" alt="avatar" class="img-fluid avatar">
               <p>
                 <span>John Doe</span>
+                Life is what happens when you're busy making other plans.
+              </p>
+            </div>
+            <div class="comment-box">
+              <img src="./img/avatar-1.png" alt="avatar" class="img-fluid avatar">
+              <p>
+                <span>James Smith</span>
+                The greatest glory in living lies not in never falling, but in rising every time we fall
+              </p>
+            </div>
+            <div class="comment-box">
+              <img src="./img/avatar-2.png" alt="avatar" class="img-fluid avatar">
+              <p>
+                <span>Michael Smith</span>
+                The way to get started is to quit talking and begin doing
+              </p>
+            </div>
+            <div class="comment-box">
+              <img src="./img/avatar-3.png" alt="avatar" class="img-fluid avatar">
+              <p>
+                <span>Robert Smith</span>
+                Your time is limited, so don't waste it living someone else's life. Don't be trapped by dogma – which is
+                living with the
+                results of other people's thinking
+              </p>
+            </div>
+            <div class="comment-box">
+              <img src="./img/avatar-4.png" alt="avatar" class="img-fluid avatar">
+              <p>
+                <span>Maria Garcia</span>
+                If life were predictable it would cease to be life, and be without flavor.
+              </p>
+            </div>
+            <div class="comment-box">
+              <img src="./img/avatar-5.png" alt="avatar" class="img-fluid avatar">
+              <p>
+                <span>Maria Rodriguez</span>
                 Foundational de-risking is the broadest concept of
                 non-financial de-risking, targeting the most crosscutting macro-economic risks a country faces
               </p>
             </div>
             <div class="comment-box">
-              <img src="./img/avatar.jpg" alt="avatar" class="img-fluid avatar">
+              <img src="./img/avatar-6.png" alt="avatar" class="img-fluid avatar">
               <p>
-                <span>John Doe</span>
-                Foundational de-risking is the broadest concept of
-                non-financial de-risking, targeting the most crosscutting macro-economic risks a country faces
+                <span>Maria Hernandez</span>
+                f you look at what you have in life, you'll always have more. If you look at what you don't have in
+                life, you'll never
+                have enough.
               </p>
             </div>
             <div class="comment-box">
-              <img src="./img/avatar.jpg" alt="avatar" class="img-fluid avatar">
+              <img src="./img/avatar-7.jfif" alt="avatar" class="img-fluid avatar">
               <p>
-                <span>John Doe</span>
-                Foundational de-risking is the broadest concept of
-                non-financial de-risking, targeting the most crosscutting macro-economic risks a country faces
-              </p>
-            </div>
-            <div class="comment-box">
-              <img src="./img/avatar.jpg" alt="avatar" class="img-fluid avatar">
-              <p>
-                <span>John Doe</span>
-                Foundational de-risking is the broadest concept of
-                non-financial de-risking, targeting the most crosscutting macro-economic risks a country faces
-              </p>
-            </div>
-            <div class="comment-box">
-              <img src="./img/avatar.jpg" alt="avatar" class="img-fluid avatar">
-              <p>
-                <span>John Doe</span>
-                Foundational de-risking is the broadest concept of
-                non-financial de-risking, targeting the most crosscutting macro-economic risks a country faces
-              </p>
-            </div>
-            <div class="comment-box">
-              <img src="./img/avatar.jpg" alt="avatar" class="img-fluid avatar">
-              <p>
-                <span>John Doe</span>
-                Foundational de-risking is the broadest concept of
-                non-financial de-risking, targeting the most crosscutting macro-economic risks a country faces
-              </p>
-            </div>
-            <div class="comment-box">
-              <img src="./img/avatar.jpg" alt="avatar" class="img-fluid avatar">
-              <p>
-                <span>John Doe</span>
-                Foundational de-risking is the broadest concept of
-                non-financial de-risking, targeting the most crosscutting macro-economic risks a country faces
-              </p>
-            </div>
-            <div class="comment-box">
-              <img src="./img/avatar.jpg" alt="avatar" class="img-fluid avatar">
-              <p>
-                <span>John Doe</span>
-                Foundational de-risking is the broadest concept of
-                non-financial de-risking, targeting the most crosscutting macro-economic risks a country faces
+                <span>James Johnson</span>
+                If you set your goals ridiculously high and it's a failure, you will fail above everyone else's success.
               </p>
             </div>
 
@@ -110,11 +107,180 @@
             <button class="btn btn-dark btn-small"><i class="fa-solid fa-comment"></i> Chat</button>
           </div>
         </div>
-        <!-- <div class="tab-content" id="audience-content"></div> -->
-        <!-- <div class="tab-content" id="speakers-content"></div> -->
+        <div class="tab-content hidden" id="audience-content">
+          <div class="audiences">
+            <div>
+              <img src="./img/avatar.jpg" alt="avatar" class="img-fluid avatar">
+              <span>Liam Anderson</span>
+            </div>
+            <div>
+              <img src="./img/avatar-1.png" alt="avatar" class="img-fluid avatar">
+              <span>Noah Beckett</span>
+            </div>
+            <div>
+              <img src="./img/avatar-2.png" alt="avatar" class="img-fluid avatar">
+              <span>Johnny Depp</span>
+            </div>
+            <div>
+              <img src="./img/avatar-3.png" alt="avatar" class="img-fluid avatar">
+              <span>Al Pacino</span>
+            </div>
+            <div>
+              <img src="./img/avatar-4.png" alt="avatar" class="img-fluid avatar">
+              <span>Robert De Niro</span>
+            </div>
+            <div>
+              <img src="./img/avatar-5.png" alt="avatar" class="img-fluid avatar">
+              <span>Kevin Spacey</span>
+            </div>
+            <div>
+              <img src="./img/avatar-6.png" alt="avatar" class="img-fluid avatar">
+              <span>Denzel Washingtion</span>
+            </div>
+            <div>
+              <img src="./img/avatar-7.jfif" alt="avatar" class="img-fluid avatar">
+              <span>Russell Crowe</span>
+            </div>
+            <div>
+              <img src="./img/avatar-8.png" alt="avatar" class="img-fluid avatar">
+              <span>Charlize Theron</span>
+            </div>
+            <div>
+              <img src="./img/avatar-9.png" alt="avatar" class="img-fluid avatar">
+              <span>Sharlto Copley</span>
+            </div>
+            <div>
+              <img src="./img/avatar-10.webp" alt="avatar" class="img-fluid avatar">
+              <span>Arnold Vosloo</span>
+            </div>
+            <div>
+              <img src="./img/avatar-11.jpg" alt="avatar" class="img-fluid avatar">
+              <span>Adhir Kalyan</span>
+            </div>
+            <div>
+              <img src="./img/avatar-12.jpg" alt="avatar" class="img-fluid avatar">
+              <span>Richard E. Grant</span>
+            </div>
+            <div>
+              <img src="./img/avatar-2.png" alt="avatar" class="img-fluid avatar">
+              <span>Alice Krige</span>
+            </div>
+            <div>
+              <img src="./img/avatar-3.png" alt="avatar" class="img-fluid avatar">
+              <span>Trever Noah</span>
+            </div>
+            <div>
+              <img src="./img/avatar-4.png" alt="avatar" class="img-fluid avatar">
+              <span>Pearl Thusi</span>
+            </div>
+            <div>
+              <img src="./img/avatar-5.png" alt="avatar" class="img-fluid avatar">
+              <span>Lesley-Ann Brandt</span>
+            </div>
+            <div>
+              <img src="./img/avatar-6.png" alt="avatar" class="img-fluid avatar">
+              <span>Gugu Mbatha-Raw</span>
+            </div>
+            <div>
+              <img src="./img/avatar-7.jfif" alt="avatar" class="img-fluid avatar">
+              <span>Tanya van Graan</span>
+            </div>
+            <div>
+              <img src="./img/avatar-8.png" alt="avatar" class="img-fluid avatar">
+              <span>Sasha Pieterse</span>
+            </div>
+            <div>
+              <img src="./img/avatar-4.png" alt="avatar" class="img-fluid avatar">
+              <span>Pearl Thusi</span>
+            </div>
+            <div>
+              <img src="./img/avatar-5.png" alt="avatar" class="img-fluid avatar">
+              <span>Lesley-Ann Brandt</span>
+            </div>
+            <div>
+              <img src="./img/avatar-6.png" alt="avatar" class="img-fluid avatar">
+              <span>Gugu Mbatha-Raw</span>
+            </div>
+            <div>
+              <img src="./img/avatar-7.jfif" alt="avatar" class="img-fluid avatar">
+              <span>Tanya van Graan</span>
+            </div>
+            <div>
+              <img src="./img/avatar-8.png" alt="avatar" class="img-fluid avatar">
+              <span>Sasha Pieterse</span>
+            </div>
+          </div>
+        </div>
+        <div class="tab-content hidden" id="speakers-content">
+          <div class="speakers">
+            <div>
+              <img src="./img/avatar-3.png" alt="avatar" class="img-fluid avatar">
+              <span>Tammin Sursok</span>
+            </div>
+            <div>
+              <img src="./img/avatar-9.png" alt="avatar" class="img-fluid avatar">
+              <span>Elize du Toit</span>
+            </div>
+            <div>
+              <img src="./img/avatar-11.jpg" alt="avatar" class="img-fluid avatar">
+              <span>Liesl Ahlers</span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
+
+  <script>
+    /*
+  
+  ==================================
+  ==================================
+        event.html
+      Toggle Tab
+  ==================================
+  ==================================
+  
+  */
+
+    const chatTabBtn = document.querySelector('#event .communicate .tab-header div:nth-child(1)');
+    const audienceTabBtn = document.querySelector('#event .communicate .tab-header div:nth-child(2)');
+    const speakersTabBtn = document.querySelector('#event .communicate .tab-header div:nth-child(3)');
+
+    const chatTab = document.querySelector('#chat-content');
+    const audienceTab = document.querySelector('#audience-content');
+    const speakersTab = document.querySelector('#speakers-content');
+
+    // console.log(chatTabBtn, audienceTabBtn, speakersTabBtn);
+
+    chatTabBtn.addEventListener('click', e => {
+      chatTabBtn.classList.add('active');
+      audienceTabBtn.classList.remove('active');
+      speakersTabBtn.classList.remove('active');
+      chatTab.classList.remove('hidden');
+      audienceTab.classList.add('hidden');
+      speakersTab.classList.add('hidden');
+    });
+
+    audienceTabBtn.addEventListener('click', e => {
+      chatTabBtn.classList.remove('active');
+      audienceTabBtn.classList.add('active');
+      speakersTabBtn.classList.remove('active');
+      chatTab.classList.add('hidden');
+      audienceTab.classList.remove('hidden');
+      speakersTab.classList.add('hidden');
+    });
+
+    speakersTabBtn.addEventListener('click', e => {
+      chatTabBtn.classList.remove('active');
+      audienceTabBtn.classList.remove('active');
+      speakersTabBtn.classList.add('active');
+      chatTab.classList.add('hidden');
+      audienceTab.classList.add('hidden');
+      speakersTab.classList.remove('hidden');
+    });
+
+  </script>
 
 </body>
 
