Event Page is Responsive Now

--- a/event.html
+++ b/event.html
@@ -23,7 +23,7 @@
           <p>South Africa’s renewable energy programme</p>
         </div>
         <div class="stream-video">
-          <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4"
+          <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerJoyrides.mp4"
             controls></video>
         </div>
         <div class="stream-action">
@@ -32,9 +32,9 @@
       </div>
       <div class="communicate">
         <div class="tab-header">
-          <div class="active"><i class="fa-solid fa-comments"></i> Chat</div>
-          <div><i class="fa-solid fa-users"></i> Audience</div>
-          <div><i class="fa-solid fa-video"></i> Speakers</div>
+          <div class="active"><i class="fa-solid fa-comments"></i> <span>Chat</span></div>
+          <div><i class="fa-solid fa-users"></i> <span>Audience</span></div>
+          <div><i class="fa-solid fa-video"></i> <span>Speakers</span></div>
         </div>
         <div class="tab-content" id="chat-content">
           <div class="comments">
@@ -232,12 +232,12 @@
   </section>
 
   <script>
-    /*
+  /*
   
   ==================================
   ==================================
         event.html
-      Toggle Tab
+        Toggle Tab
   ==================================
   ==================================
   
@@ -279,6 +279,21 @@
       audienceTab.classList.add('hidden');
       speakersTab.classList.remove('hidden');
     });
+
+      /*
+    
+      ==================================
+      ==================================
+            event.html
+            Chat Send
+      ==================================
+      ==================================
+      
+      */
+
+
+
+
 
   </script>
 
