--- a/event.html
+++ b/event.html
@@ -22,13 +22,13 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark" id="header">
     <div class="container">
-      <a class="navbar-brand" href="#"><img src="./img/brand.png" alt="brand"></a>
+      <!-- <a class="navbar-brand" href="#"><img src="./img/brand.png" alt="brand"></a> -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item px-md-3">
             <a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-house"></i> Home</a>
           </li>
