--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
 
   <link rel="stylesheet" href="./css/style.css">
-  <title>Event Title | NextEvent</title>
+  <title>Profile | NextEvent</title>
 </head>
 
 <body>
@@ -50,7 +50,58 @@
     </div>
   </nav>
 
+  <section id="profile">
+    <div class="container">
+      <div class="profile-pic">
+        <label class="-label" for="file">
+          <span class="glyphicon glyphicon-camera"></span>
+          <span>Update Photo</span>
+        </label>
+        <input id="file" type="file" onchange="loadFile(event)" />
+        <img src="./img/avatar-5.png" id="output" width="200" />
+      </div>
+      <div class="details row p-2">
+        <div class="col-12 mb-4 mt-3 text-center">
+          <h2>Update Your Profile</h2>
+        </div>
+
+        <div class="col-md-6 mb-3">
+          <label for="firstName" class="form-label"><i class="fas fa-user"></i> First Name</label>
+          <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name">
+        </div>
+        <div class="col-md-6 mb-3">
+          <label for="lastName" class="form-label"><i class="fas fa-user"></i> Last Name</label>
+          <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name">
+        </div>
+        <div class="col-12 mb-3">
+          <label for="userID" class="form-label"><i class="fas fa-id-card"></i> User ID:</label>
+          <input type="text" class="form-control" id="userID" name="userID" placeholder="Enter User ID">
+        </div>
+        <div class="col-12 mb-3">
+          <label for="userEmail" class="form-label"><i class="fas fa-envelope"></i> Email:</label>
+          <input type="text" class="form-control" id="userEmail" name="userEmail" placeholder="Enter Email">
+        </div>
+        <div class="col-12 mb-3">
+          <label for="userPhone" class="form-label"><i class="fas fa-phone"></i> Phone:</label>
+          <input type="text" class="form-control" id="userPhone" name="userPhone" placeholder="Enter Phone">
+        </div>
+
+        <div class="col-12 mt-3">
+          <button class="btn btn-dark"><i class="fas fa-pencil"></i>Update Profile</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script>
+    var loadFile = function (event) {
+      var image = document.getElementById("output");
+      image.src = URL.createObjectURL(event.target.files[0]);
+    };
+
+  </script>
 
 </body>
 
