Chat Submit Button Removed

--- a/event.html
+++ b/event.html
@@ -274,7 +274,7 @@
 
 
   <footer>
-    <p>All right Reserved, copyright &copy; 2021, NextEvent</p>
+    <p>All right Reserved, copyright &copy; 2021.</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
