--- a/event.html
+++ b/event.html
@@ -8,6 +8,8 @@
 
   <link rel="stylesheet" href="https://bootswatch.com/5/zephyr/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="./lib/emojiarea/css/emoji.css">
 
   <link rel="stylesheet" href="./css/style.css">
   <style>
@@ -143,9 +145,11 @@
 
           </div>
           <form class="chat-form" id="chat-form">
-            <img src="./img/avatar.jpg" class="img-fluid avatar" alt="avatar">
-            <input type="text" placeholder="chat as john_doe">
-            <!-- <button type='submit' class="btn btn-dark btn-small"><i class="fa-solid fa-comment"></i> Chat</button> -->
+            <p class="lead emoji-picker-container">
+              <input type="text" id="myInputBox" class="form-control" placeholder="chat as johndoe"
+                data-emojiable="true">
+            </p>
+            <button type='submit' class="btn"><i class="fa-solid fa-paper-plane"></i></button>
           </form>
         </div>
         <div class="tab-content hidden" id="audience-content">
@@ -278,6 +282,11 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="./lib/emojiarea/js/config.js"></script>
+  <script src="./lib/emojiarea/js/util.js"></script>
+  <script src="./lib/emojiarea/js/jquery.emojiarea.js"></script>
+  <script src="./lib/emojiarea/js/emoji-picker.js"></script>
   <script>
     /*
     
@@ -356,20 +365,43 @@
           </p>
       </div>`
         chatInputBox.value = '';
+        document.querySelector('.emoji-wysiwyg-editor.form-control').innerHTML = '';
 
         commentSection.scrollTop = commentSection.scrollHeight;
       }
-    })
+    });
 
-    // < div class="comment-box" >
-    //       <img src="./img/avatar-6.png" alt="avatar" class="img-fluid avatar">
-    //         <p>
-    //           <span>Maria Hernandez</span>
-    //           f you look at what you have in life, you'll always have more. If you look at what you don't have in
-    //           life, you'll never
-    //           have enough.
-    //         </p>
-    //       </div>
+
+    /*
+ 
+==================================
+==================================
+      event.html
+      Emoji Activation
+==================================
+==================================
+ 
+*/
+
+    $(function () {
+      // Initializes and creates emoji set from sprite sheet
+      window.emojiPicker = new EmojiPicker({
+        emojiable_selector: '[data-emojiable=true]',
+        assetsPath: './lib/emojiarea/img/',
+        popupButtonClasses: 'fa fa-smile-o'
+      });
+      // Finds all elements with `emojiable_selector` and converts them to rich emoji input fields
+      // You may want to delay this step if you have dynamically created input fields that appear later in the loading process
+      // It can be called as many times as necessary; previously converted input fields will not be converted again
+      window.emojiPicker.discover();
+
+      $('.emoji-wysiwyg-editor.form-control').css({
+        "height": '40px',
+        "font-size": '1rem',
+        "line-height": '25px'
+      })
+    });
+
 
 
 
